--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -385,7 +385,7 @@ button,
 [type=button],
 [type=reset],
 [type=submit] {
-  -webkit-appearance: button;
+  -webkit-appearancebutton: button;
 }
 button:not(:disabled),
 [type=button]:not(:disabled),
@@ -443,7 +443,7 @@ legend + * {
 
 [type=search] {
   outline-offset: -2px;
-  -webkit-appearance: textfield;
+  -webkit-appearance-text: textfield;
 }
 
 /* rtl:raw:
@@ -464,7 +464,7 @@ legend + * {
 
 ::file-selector-button {
   font: inherit;
-  -webkit-appearance: button;
+  -webkit-appearancebutton: button;
 }
 
 output {
